{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player",
            "id": "b1ec140f-87ce-46e4-a475-4e729a9bcdb9",
            "actions": [
                {
                    "name": "EndTurn",
                    "type": "Button",
                    "id": "772d366e-9e30-4d20-8087-fbcaf1ecccb0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "StartBattle",
                    "type": "Button",
                    "id": "906ce7f3-92bb-4d62-ba04-453214ac8cf6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2d989606-6ce9-445f-9908-c522abb0df57",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "EndTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac93e4c7-95dd-418d-9da9-8675933e2972",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keyboard and Mouse",
                    "action": "StartBattle",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keyboard and Mouse",
            "bindingGroup": "Keyboard and Mouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}